Closed
Bug 320938
Opened 18 years ago
Closed 17 years ago
autocompletion of a text-field pops up above firefox
Categories
(Toolkit :: Autocomplete, defect)
Toolkit
Autocomplete
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: michael.arnauts+mozilla, Assigned: mwu)
References
()
Details
(Keywords: fixed1.8.1, testcase)
Attachments
(2 files)
1.48 KB,
patch
|
jst
:
first-review+
dbaron
:
approval1.8.1+
|
Details | Diff | Splinter Review |
1.52 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; nl; rv:1.8) Gecko/20051111 Firefox/1.5 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; nl; rv:1.8) Gecko/20051111 Firefox/1.5 Open the testcase: http://users.skynet.be/bk333867/testcase.html Click inside the inputbox Scroll down, without clicking inside the browserarea (so the cursor stays in the inputfield) Press key down You should see the combobox of the inputfield (with the previous entered words) appear on top of firefox. Reproducible: Always Steps to Reproduce:
Reporter | ||
Updated•18 years ago
|
Flags: testcase+
Updated•18 years ago
|
Component: General → Autocomplete
Product: Firefox → Toolkit
QA Contact: general → autocomplete
Updated•18 years ago
|
Reproducible with Firefox 1.0.6 and Firefox 1.5 (Linux), related to bug 187772?
Comment 2•18 years ago
|
||
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20051220 Firefox/1.6a1 Masayuki's patch for bug 187772 does not fix this for me.
OS: Windows XP → All
Hardware: PC → All
Version: unspecified → Trunk
Summary: autocompletition of a text-field pops up above firefox → autocompletion of a text-field pops up above firefox
Comment 3•18 years ago
|
||
Thanks, I'll create the patch.
Assignee: nobody → masayuki
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → mozilla1.9alpha1
Comment 4•18 years ago
|
||
Umm... the patch conflicts with bug 187772's patch. We need to fix bug 187772 before this...
Depends on: 187772
Assignee | ||
Comment 5•18 years ago
|
||
Is the patch still around somewhere?
Comment 6•18 years ago
|
||
No, but I don't have much time for this now, if you can fix, please take this.
Assignee | ||
Comment 7•18 years ago
|
||
(In reply to comment #6) > No, but I don't have much time for this now, if you can fix, please take this. > Sure, I'll take a look.
Assignee: masayuki → michael.wu
Assignee | ||
Comment 8•18 years ago
|
||
Attachment #229183 -
Flags: first-review?(jst)
Comment 9•18 years ago
|
||
Comment on attachment 229183 [details] [diff] [review] Make input field visible before opening popup Looks like the right thing to do. r=jst
Attachment #229183 -
Flags: first-review?(jst) → first-review+
![]() |
||
Comment 10•17 years ago
|
||
Checked in to trunk
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•17 years ago
|
Attachment #229183 -
Flags: approval1.8.1?
Comment 11•17 years ago
|
||
Comment on attachment 229183 [details] [diff] [review] Make input field visible before opening popup a=dbaron on behalf of drivers. Please check in to MOZILLA_1_8_BRANCH and mark fixed1.8.1 after doing so.
Attachment #229183 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Updated•17 years ago
|
Keywords: fixed1.8.1
Assignee | ||
Comment 12•17 years ago
|
||
The branch version of GetPrimaryFrameFor sucks.
Assignee | ||
Updated•17 years ago
|
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
Comment 13•17 years ago
|
||
Checking in nsFormFillController.cpp; /cvsroot/mozilla/toolkit/components/satchel/src/nsFormFillController.cpp,v <-- nsFormFillController.cpp new revision: 1.51.4.13; previous revision: 1.51.4.12 done Checked into 1.8.1 branch.
Whiteboard: [checkin needed (1.8 branch)]
Updated•17 years ago
|
Keywords: fixed1.8.1
Comment 14•17 years ago
|
||
*** Bug 336689 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•