Bug 320938 - autocompletion of a text-field pops up above firefox. patch=mwu, r=jst